--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/omega/theme.css" />
   <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" id="theme-link" type="text/css" href="assets/themes/saga-purple/theme.css">
 
 </head>
-<body>
+<body >
   <app-root></app-root>
 </body>
 </html>
